--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,7 @@ install_requires =
     lxml >= 4.9.1
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
-    packaging >= 21.0.0
+    packaging < 22.0.0
     # use temp advanced patched release
     parameter-expansion-patched >= 0.3.1
     pdfminer.six >= 20200101
