--- a/requirements.txt
+++ b/requirements.txt
@@ -6,76 +6,76 @@ beartype==0.17.2
 boolean.py==4.0
 certifi==2024.2.2
 cffi==1.16.0
-chardet==5.0.0
-charset-normalizer==2.1.0
+chardet==5.2.0
+charset-normalizer==3.3.2
 click==8.1.7
-colorama==0.4.5
+colorama==0.4.6
 commoncode==31.0.3
-construct==2.10.68
-container-inspector==31.1.0
+construct==2.10.70
+container-inspector==32.0.1
 cryptography==42.0.5
 debian-inspector==31.1.0
-dockerfile-parse==1.2.0
+dockerfile-parse==2.0.1
 dparse2==0.7.0
 extractcode==31.0.0
 extractcode-7z==16.5.210531
 extractcode-libarchive==3.5.1.210531
-fasteners==0.17.3
-fingerprints==1.0.3
-ftfy==6.1.1
+fasteners==0.19
+fingerprints==1.2.3
+ftfy==6.1.3
 future==0.18.2
-gemfileparser2==0.9.0
+gemfileparser2==0.9.3
 html5lib==1.1
-idna==3.3
-importlib-metadata==4.12.0
+idna==3.6
+importlib-metadata==7.0.2
 inflection==0.5.1
 intbitset==3.1.0
 isodate==0.6.1
-jaraco.functools==3.5.1
+jaraco.functools==4.0.0
 javaproperties==0.8.1
 Jinja2==3.1.3
 jsonstreams==0.6.0
 license-expression==30.3.0
 lxml==5.1.0
 MarkupSafe==2.1.5
-more-itertools==8.13.0
-normality==2.3.3
+more-itertools==10.2.0
+normality==2.5.0
 packageurl-python==0.15.0
-packaging==21.3
+packaging==23.2
 packvers==21.5
 parameter-expansion-patched==0.3.1
-pdfminer.six==20220524
-pefile==2022.5.30
+pdfminer.six==20231228
+pefile==2023.2.7
 pip-requirements-parser==32.0.1
 pkginfo2==30.0.0
-pluggy==1.0.0
+pluggy==1.4.0
 plugincode==32.0.0
 ply==3.11
 publicsuffix2==2.20191221
 pyahocorasick==2.1.0
 pycparser==2.21
-pygmars==0.7.0
-Pygments==2.13.0
+pygmars==0.8.0
+Pygments==2.17.2
 pymaven-patch==0.3.2
-pyparsing==3.0.9
-pytz==2022.1
+pyparsing==3.1.1
+pytz==2023.4
 PyYAML==6.0.1
-rdflib==6.2.0
+rdflib==7.0.0
 requests==2.31.0
 saneyaml==0.6.0
 semantic-version==2.8.5
 six==1.16.0
-soupsieve==2.3.2.post1
+soupsieve==2.5
 spdx-tools==0.8.2
 text-unidecode==1.3
 toml==0.10.2
 typecode==30.0.1
 typecode-libmagic==5.39.210531
-typing-extensions==4.3.0
+typing-extensions==4.9.0
 uritools==4.0.2
 urllib3==2.2.1
 urlpy==0.5
-wcwidth==0.2.5
+wcwidth==0.2.13
 webencodings==0.5.1
 xmltodict==0.13.0
-zipp==3.8.1
+zipp==3.17.0
