--- a/tests/formattedcode/data/common/manifests-expected.yaml
+++ b/tests/formattedcode/data/common/manifests-expected.yaml
@@ -21,18 +21,18 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 3.0.0
+    output_format_version: 3.1.0
     message:
     errors: []
     warnings: []
     extra_data:
       system_environment:
-        operating_system: linux
+        operating_system: mac
         cpu_architecture: 64
-        platform: Linux-5.15.0-89-generic-x86_64-with-glibc2.29
-        platform_version: '#99~20.04.1-Ubuntu SMP Thu Nov 2 15:16:47 UTC 2023'
-        python_version: "3.8.10 (default, Nov 22 2023, 10:22:35) \n[GCC 9.4.0]"
-      spdx_license_list_version: '3.22'
+        platform: macOS-14.5-x86_64-i386-64bit
+        platform_version: 'Darwin Kernel Version 23.5.0: Wed May  1 20:16:51 PDT 2024; root:xnu-10063.121.3~5/RELEASE_ARM64_T8103'
+        python_version: 3.12.3 (main, Apr  9 2024, 08:09:14) [Clang 15.0.0 (clang-1500.3.9.4)]
+      spdx_license_list_version: '3.23'
       files_count: 4
 summary:
   declared_license_expression: apache-2.0 AND cddl-1.0 AND mit
@@ -139,6 +139,7 @@ packages:
       - manifests/maven/persistence-api-1.0.pom
     datasource_ids:
       - maven_pom
+    license_clarity: []
     purl: pkg:maven/javax.persistence/persistence-api@1.0
   - type: npm
     namespace:
@@ -224,6 +225,7 @@ packages:
       - manifests/npm-license-mapping/package.json
     datasource_ids:
       - npm_package_json
+    license_clarity: []
     purl: pkg:npm/grunt-esvm@3.2.8
   - type: npm
     namespace:
@@ -289,6 +291,7 @@ packages:
       - manifests/npm-license-string/package.json
     datasource_ids:
       - npm_package_json
+    license_clarity: []
     purl: pkg:npm/angular-compare-validator@0.1.1
 dependencies:
   - purl: pkg:npm/bluebird
