--- a/tests/cluecode/data/copyrights/misco4/portions-initial-developer.txt.yml
+++ b/tests/cluecode/data/copyrights/misco4/portions-initial-developer.txt.yml
@@ -2,8 +2,9 @@ what:
   - copyrights
   - holders
   - holders_summary
+  - authors
 copyrights:
-  - Portions created by the Initial Developer are Copyright (c) 1994-2000 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) the Initial Developer
 holders:
   - the Initial Developer
 holders_summary:
