--- a/tests/cluecode/data/ics/chromium-chrome-browser-resources/about_credits.html.yml
+++ b/tests/cluecode/data/ics/chromium-chrome-browser-resources/about_credits.html.yml
@@ -5,14 +5,14 @@ what:
 copyrights:
   - Copyright (c) 1991, 2000, 2001 by Lucent Technologies
   - Copyright (c) 2008-2009, Google Inc.
-  - Copyright (c) 1998-2000 the Initial Developer
-  - Copyright (c) 1994-2000 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) 1998-2000 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) 1994-2000 the Initial Developer
   - (c) Copyright IBM Corporation. 2006, 2006
   - Copyright (c) 2006, Google Inc.
   - Copyright (c) 2000-2008 Julian Seward
   - Copyright (c) 2007 Red Hat, inc
   - Copyright 2003-2005 Colin Percival
-  - Copyright (c) 2000 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) 2000 the Initial Developer
   - Copyright 1993 by OpenVision Technologies, Inc.
   - Copyright 2007 Google Inc.
   - Copyright (c) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007 Alexander
@@ -45,7 +45,7 @@ copyrights:
   - Copyright 1996 Chih-Hao Tsai @ Beckman Institute, University of Illinois c-tsai4@uiuc.edu
     http://casper.beckman.uiuc.edu/~c-tsai4
   - Copyright 2000, 2001, 2002, 2003 Nara Institute of Science and Technology
-  - Copyright (c) 2002 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) 2002 the Initial Developer
   - Copyright (c) 2006-2008 Jason Evans jasone@FreeBSD.org
   - Copyright (c) International Business Machines Corp., 2002,2007
   - Copyright 2000-2007 Niels Provos provos@citi.umich.edu
@@ -74,8 +74,8 @@ copyrights:
   - Copyright 2008 MolokoCacao
   - Copyright (c) 2004-2009 Sergey Lyubka
   - Portions Copyright (c) 2009 Gilbert Wellisch
-  - Copyright (c) 2002 the Initial Developer
-  - Copyright (c) 1998 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) 2002 the Initial Developer
+  - Portions created by the Initial Developer are Copyright (c) 1998 the Initial Developer
   - Copyright (c) 2004-2009 by Mulle Kybernetik
   - Copyright (c) 2008 The Khronos Group Inc.
   - Copyright (c) 1998-2008 The OpenSSL Project
