--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -5,7 +5,7 @@ name: Create ScanCode release archives, then test and publish to GH and PyPI
  # Summary of the steps:
  # - Build wheel and sdist for the "main" scancode, then build these for the "mini" flavor
  #  - test each wheel and sdist on every possible OS x Python version combinations
- # - Build release app archives, one for each of linux, windows, macos on Python 3.8
+ # - Build release app archives, one for each of linux, windows, macos on Python 3.9 to 3.12
  #  - test each on its target OS and Python version
  # - Create gh-release and upload app archives to release
  # - Upload all wheels and sdist to PyPI
@@ -34,10 +34,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-       pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+       pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v4
@@ -69,7 +69,7 @@ jobs:
       fail-fast: true
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -100,10 +100,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-       pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+       pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - run: git fetch --prune --unshallow
 
       - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v4
@@ -134,10 +135,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-       pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+       pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - run: git fetch --prune --unshallow
 
       - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v4
@@ -168,10 +170,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-       pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+       pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - run: git fetch --prune --unshallow
 
       - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v4
@@ -202,7 +205,8 @@ jobs:
       fail-fast: true
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - run: git fetch --prune --unshallow
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -235,11 +239,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-22.04, ubuntu-22.04, macos-12, macos-13]
-        pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-12, macos-13]
+        pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.pyver }} on ${{ matrix.os }}
         uses: actions/setup-python@v4
@@ -282,10 +286,10 @@ jobs:
       fail-fast: true
       matrix:
        os: [windows-2019, windows-2022]
-       pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+       pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.pyver }} on ${{ matrix.os }}
         uses: actions/setup-python@v4
@@ -326,11 +330,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-22.04, ubuntu-22.04]
-        pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-22.04, ubuntu-24.04]
+        pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.pyver }} on ${{ matrix.os }}
         uses: actions/setup-python@v4
@@ -368,10 +372,10 @@ jobs:
       fail-fast: true
       matrix:
         os: [macos-12, macos-13]
-        pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.pyver }} on ${{ matrix.os }}
         uses: actions/setup-python@v4
@@ -409,10 +413,10 @@ jobs:
       fail-fast: true
       matrix:
         os: [windows-2019, windows-2022]
-        pyver: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        pyver: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.pyver }} on ${{ matrix.os }}
         uses: actions/setup-python@v4
@@ -457,12 +461,6 @@ jobs:
           name: source_app
           path: dist
 
-      - name: Download a single artifact macos_app for python 3.8
-        uses: actions/download-artifact@v3
-        with:
-          name: macos_app_py_3.8
-          path: dist
-
       - name: Download a single artifact macos_app for python 3.9
         uses: actions/download-artifact@v3
         with:
@@ -487,12 +485,6 @@ jobs:
           name: macos_app_py_3.12
           path: dist
 
-      - name: Download a single artifact linux_app for python 3.8
-        uses: actions/download-artifact@v3
-        with:
-          name: linux_app_py_3.8
-          path: dist
-
       - name: Download a single artifact linux_app for python 3.9
         uses: actions/download-artifact@v3
         with:
@@ -515,12 +507,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: linux_app_py_3.12
-          path: dist
-
-      - name: Download a single artifact windows_app for python 3.8
-        uses: actions/download-artifact@v3
-        with:
-          name: windows_app_py_3.8
           path: dist
 
       - name: Download a single artifact windows_app for python 3.9
@@ -573,13 +559,13 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        dist_names: ["wheels-3.8", "wheels-3.9", "wheels-3.10", "wheels-3.11", "wheels-3.12", sdists]
+        dist_names: ["wheels-3.9", "wheels-3.10", "wheels-3.11", "wheels-3.12", sdists]
 
     steps:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - name: Download a single artifact
         uses: actions/download-artifact@v3
